@@ -1,0 +1,1 @@
+[{"name":"Steven Wright","profile_image_url":"http:\/\/assets3.twitter.com\/system\/user\/profile_image\/5819362\/normal\/sw.jpg?1178499811","screen_name":"stevenwright","description":"Every day, one quote from me.","location":"","url":null,"id":5819362,"protected":false,"status":{"created_at":"Fri Jun 01 16:06:28 +0000 2007","text":"I'm addicted to placebos. I could quit but it wouldn't matter.","id":86991742}},{"name":"Justine","profile_image_url":"http:\/\/assets0.twitter.com\/system\/user\/profile_image\/7846\/normal\/iJustine_100x100.jpg?1174864273","screen_name":"ijustine","description":"I am the internet.","location":"Pittsburgh, PA","url":"http:\/\/www.tastyblogsnack.com","id":7846,"protected":false,"status":{"created_at":"Sun Jun 03 19:57:09 +0000 2007","text":"Please help me wake up Starbucks.","id":89591842}},{"name":"timer","profile_image_url":"http:\/\/assets1.twitter.com\/system\/user\/profile_image\/5997662\/normal\/timer.gif?1179331208","screen_name":"timer","description":"","location":"","url":"http:\/\/retweet.com\/timer","id":5997662,"protected":false,"status":{"created_at":"Wed May 16 16:13:44 +0000 2007","text":"Need to remember something? Send me a direct message, and I'll tweet you back. For example, 'd timer 45 call mom' reminds you in 45 minutes.","id":66100582}},{"name":"R1 Big Weekend","profile_image_url":"http:\/\/assets1.twitter.com\/system\/user\/profile_image\/5962712\/normal\/r1logo_twitter.jpg?1179139696","screen_name":"r1bigweekend","description":null,"location":null,"url":null,"id":5962712,"protected":false,"status":{"created_at":"Sun May 20 21:55:23 +0000 2007","text":"Thanks Preston. The site is quickly getting packed up now. It's dark and cold outside.","id":71673422}},{"name":"Scott Hanselman","profile_image_url":"http:\/\/assets1.twitter.com\/system\/user\/profile_image\/5676102\/normal\/scott48x48.jpg?1177998926","screen_name":"shanselman","description":null,"location":null,"url":null,"id":5676102,"protected":false,"status":{"created_at":"Wed May 30 17:35:25 +0000 2007","text":"Blood sugar is 110. Great way to start the day. Ready for breakfast.","id":84275702}},{"name":"Jodrell Bank","profile_image_url":"http:\/\/assets2.twitter.com\/system\/user\/profile_image\/5747502\/normal\/twitter_jodrellbank.png?1178216103","screen_name":"jodrellbank","description":"Home of the world's third-largest steerable radio telescope, and the MERLIN National Facility. Part of the Univ. of Manchester","location":"53.236057, -2.306871","url":"http:\/\/www.manchester.ac.uk\/jodrellbank\/","id":5747502,"protected":false,"status":{"created_at":"Sat Jun 02 13:30:00 +0000 2007","text":"Getting ready to bounce poems off the Moon and pick up their echoes with the Telescope as part of the First Move Festival on June 15-17","id":88102552}},{"name":"TwitLit","profile_image_url":"http:\/\/assets0.twitter.com\/system\/user\/profile_image\/5588242\/normal\/twittericon.png?1178498116","screen_name":"TwitterLit","description":"Twittering the first lines of books so you don't have to. SEE ALSO: TwitterLitUK - TwitterLitCA - TwitterLitNews. [To comment, d. msg. me or contact via site.]","location":"The Stacks","url":"http:\/\/twitterlit.com","id":5588242,"protected":false,"status":{"created_at":"Sun Jun 03 09:00:46 +0000 2007","text":"\"On the drive from the suburbs to the city, we'd experienced a disturbing number of memory lapses\" http:\/\/tweetl.com\/t0","id":89035512}},{"name":"BlogPhiladelphia","profile_image_url":"http:\/\/assets3.twitter.com\/system\/user\/profile_image\/5724872\/normal\/blogphiladelphia_logo.gif?1178142536","screen_name":"BlogPhilly","description":"A Social Media UnConference in Philly","location":"Philly!","url":"http:\/\/blogphiladelphia.net","id":5724872,"protected":false,"status":{"created_at":"Sun Jun 03 20:32:29 +0000 2007","text":"wooohoooo home in nolibs the land of indie rock tight jeans and snark aplenty. good to be back","id":89621942}},{"name":"Lisa@FashWEEK","profile_image_url":"http:\/\/assets3.twitter.com\/system\/user\/profile_image\/5291252\/normal\/TWITTER.jpg?1177044270","screen_name":"OzFashionWeek","description":"Fashion, Beauty + Style editor for News.com.au","location":"Sydney","url":"http:\/\/www.news.com.au\/entertainment\/feature\/0,,5012703,00.html","id":5291252,"protected":false,"status":{"created_at":"Tue May 29 06:24:23 +0000 2007","text":"spent today getting distracted by net-a-porter.com ... that's a dangerous site for a fashion addict!","id":82160232}},{"name":"palm pictures","profile_image_url":"http:\/\/assets2.twitter.com\/system\/user\/profile_image\/4260991\/normal\/cometohillary.gif?1176335676","screen_name":"palmpictures","description":"Independent Music, Film, and Love!","location":"New York, NY","url":"http:\/\/www.palmpictures.com","id":4260991,"protected":false,"status":{"created_at":"Sun Jun 03 01:16:22 +0000 2007","text":"loves our Book Expo booth neighbors from Endless Games. check em out http:\/\/endlessgames.com\/gamesmen.html","id":88685562}},{"name":"Barack Obama","profile_image_url":"http:\/\/assets1.twitter.com\/system\/user\/profile_image\/813286\/normal\/iconbg.jpg?1177633039","screen_name":"BarackObama","description":"","location":"Chicago, IL","url":"http:\/\/www.barackobama.com","id":813286,"protected":false,"status":{"created_at":"Sun Jun 03 19:49:52 +0000 2007","text":"Heading to Democratic presidential debate at St. Anselm College in New Hampshire.  Debate starts at 7pm EST and will air live on CNN.","id":89585682}},{"name":"Hollywood.com Live","profile_image_url":"http:\/\/assets1.twitter.com\/system\/user\/profile_image\/4455001\/normal\/H_48x48c.gif?1177618725","screen_name":"hollywoodcom","description":"Hollywood.com Live @ The Tribeca Film Festival","location":"New York, NY","url":"http:\/\/fansites.hollywood.com\/live.html","id":4455001,"protected":false,"status":{"created_at":"Thu May 24 02:29:35 +0000 2007","text":"Blake, where are you now?! We'll miss you nxt wk... Go IDOLS! ... See you both over the rainbow!","id":76045122}},{"name":"Veronica","profile_image_url":"http:\/\/assets2.twitter.com\/system\/user\/profile_image\/10350\/normal\/mypictr_140x144.jpg?1179253942","screen_name":"Veronica","description":"CNET TV host and podcasting diva of Buzz Out Loud","location":"San Francisco","url":"http:\/\/www.veronicabelmont.com","id":10350,"protected":false,"status":{"created_at":"Sun Jun 03 03:11:10 +0000 2007","text":"i just saw kari byron! my hero!","id":88774212}},{"name":"Alison","profile_image_url":"http:\/\/assets2.twitter.com\/system\/user\/profile_image\/5248441\/normal\/new1.jpg?1177002287","screen_name":"AFineFrenzy","description":"","location":"Los Angeles","url":"http:\/\/www.myspace.com\/afinefrenzy","id":5248441,"protected":false,"status":{"created_at":"Sat Jun 02 06:52:41 +0000 2007","text":"the sea took my sunglasses, i took a boatload of sand home in my bikini. fair trade? the moon is orange. my skin is still warm from the sun.","id":87808312}},{"name":"Rocketboom","profile_image_url":"http:\/\/assets3.twitter.com\/system\/user\/profile_image\/1502111\/normal\/rocket.jpg?1174312502","screen_name":"Rocketboom","description":"Daily","location":"New York City","url":"http:\/\/www.rocketboom.com","id":1502111,"protected":false,"status":{"created_at":"Sat Jun 02 15:33:06 +0000 2007","text":"Ultimate Frisbee 2.0 in Central Park today on Sat. @ 4pm: http:\/\/groups.google.com\/group\/frisbee2point0\/","id":88218242}},{"name":"TrippingOnWords","profile_image_url":"http:\/\/assets0.twitter.com\/system\/user\/profile_image\/59003\/normal\/lara_and_claire_BIG_HAIR.jpg?1171962588","screen_name":"TrippingOnWords","description":"Training with 200 Kenyan Orphans for the Hope Runs Marathon and 10K. As a new non profit, Hope Runs is looking for help\u2026check us out at TrippingOnWords.com!","location":"Kenya","url":"http:\/\/TrippingOnWords.com","id":59003,"protected":false,"status":{"created_at":"Sat Jun 02 18:55:59 +0000 2007","text":"heading to bed early...visiting Manager's church tomorrow. an early start is essential, apparently","id":88405002}},{"name":"Web 2.0 Expo","profile_image_url":"http:\/\/assets0.twitter.com\/system\/user\/profile_image\/4200861\/normal\/webex2007_logo_square.jpg?1176317215","screen_name":"w2e","description":"Official twitter for the Web 2.0 Expo","location":"san francisco, ca","url":"http:\/\/blog.web2expo.com","id":4200861,"protected":false,"status":{"created_at":"Thu Apr 19 01:00:17 +0000 2007","text":"Thanks for coming! \r\nWine being brought to web2open in secs.","id":32588451}},{"name":"Jessica Mellott","profile_image_url":"http:\/\/assets2.twitter.com\/system\/user\/profile_image\/3658381\/normal\/Jessica_Mellott.jpg?1177685550","screen_name":"JessicaMellott","description":"Teen pop singer  www.jessicamellott.com  www.myspace.com\/jessicamellott","location":"Maryland","url":"http:\/\/www.jessicamellott.com","id":3658381,"protected":false,"status":{"created_at":"Fri Jun 01 23:36:46 +0000 2007","text":"Getting ready for grad party weekend!","id":87429882}},{"name":"Drive","profile_image_url":"http:\/\/assets0.twitter.com\/system\/user\/profile_image\/3946281\/normal\/nathan.png?1176155112","screen_name":"foxdrive","description":"Action-fueled drama about an illegal, underground cross-country road race. Director Greg Yaitanes will Twitter live director's commentary starting Sunday 8\/7c.","location":"","url":null,"id":3946281,"protected":false,"status":{"created_at":"Tue Apr 17 04:05:53 +0000 2007","text":"twitter and tell me what you thought of the episode tonight.","id":30603561}},{"name":"Status Updates","profile_image_url":"http:\/\/assets0.twitter.com\/system\/user\/profile_image\/46413\/normal\/maintenance.gif?1171961490","screen_name":"twitter_status","description":"140 characters or less on the health of Twitter!","location":"Inside the Twitter","url":null,"id":46413,"protected":false,"status":{"created_at":"Tue May 29 07:54:18 +0000 2007","text":"Catching up on processing updates after some brief confusion.","id":82226192}}]
